# Next-Best-View-Via-Topological-Features

./: CMakeLists.txt  LICENSE.md  README.md
Hardware/: BaseSupportVector.dxf  CameraSupport.stl  CarbonFiberMotorMount.stl  PitchPlateVector.dxf  PitchSupportVector.dxf  README.md  RealsenseMount.stl  Standoff.stl  StandoffNut.stl  VasePlateVector.dxf  YawPlateVector.dxf  YawSupportVector.dxf
Software/: CMakeLists.txt  README.md
Software/src/: armcontrol.cpp  transform_and_union.cpp
src/: armcontrol.cpp
